--- a/css/cards.css
+++ b/css/cards.css
@@ -45,3 +45,17 @@
    text-shadow: 0 0 3px;
    margin: 2%;
 }
+
+/*Responsive*/
+
+@media (max-width: 1100px) {
+    .container {
+        display: grid;
+        grid-template-columns: 300px 300px;
+        grid-gap: 50px;
+        justify-content: center;
+        align-items: center;
+        height: 120%;
+        margin-bottom: 20px;
+    }
+}
