--- a/css/form.css
+++ b/css/form.css
@@ -120,16 +120,19 @@
     font-size: 1rem;
 }
 
-@media screen and (min-width: 1024px) {
+@media (min-width: 768px) {
     .form {
         background-image: url('https://bit.ly/3z6B7dq');
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
+        width: 80%;
     } 
-    .form__container {
-        width: 60vw;
+
+    .form__textarea-section{
+        width: 86%;
     }
+
     .form__title {
         background: rgba(77, 77, 92, 0.6);
         border: 1px solid transparent;
