--- a/css/cards.css
+++ b/css/cards.css
@@ -48,14 +48,14 @@
 
 /*Responsive*/
 
-@media (max-width: 1100px) {
+@media (max-width: 768px) {
     .container {
-        display: grid;
-        grid-template-columns: 300px 300px;
-        grid-gap: 50px;
-        justify-content: center;
+        display: block;
         align-items: center;
-        height: 120%;
-        margin-bottom: 20px;
+        margin: 0 1.2 rem;
+    }
+
+    .cards__characters {
+        margin-bottom: 2em;
     }
 }
