--- a/css/home.css
+++ b/css/home.css
@@ -40,7 +40,7 @@ footer p {
 }
 
 /*Responsive*/
-@media(max-width: 768px) {
+@media (max-width: 768px) {
     /*Header*/
     .show-menu,
     .hide-menu {
@@ -69,5 +69,9 @@ footer p {
     }
     #check:checked ~ .menu {
         right: 0;
+    }
+
+    footer {
+        width: auto;
     }
 }
